--- a/package.json
+++ b/package.json
@@ -13,56 +13,57 @@
     "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "@supabase/supabase-js": "^2.45.0",
-    "@supabase/ssr": "^0.5.0",
-    "@tanstack/react-query": "^5.56.0",
-    "zustand": "^4.5.0",
-    "zod": "^3.23.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "leaflet": "^1.9.4",
-    "react-leaflet": "^4.2.1",
-    "lucide-react": "^0.400.0",
-    "resend": "^3.2.0",
-    "@react-email/render": "^0.0.15",
-    "nanoid": "^5.0.0",
-    "date-fns": "^3.6.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.4.0",
-    "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.0",
     "@radix-ui/react-select": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-popover": "^1.1.0",
-    "@vercel/analytics": "^1.3.0",
+    "@react-email/render": "^0.0.15",
     "@sentry/nextjs": "^8.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "@supabase/ssr": "^0.5.0",
+    "@supabase/supabase-js": "^2.45.0",
+    "@tanstack/react-query": "^5.56.0",
+    "@vercel/analytics": "^1.3.0",
+    "autoprefixer": "^10.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.400.0",
+    "nanoid": "^5.0.0",
+    "next": "^14.2.0",
+    "postcss": "^8.4.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "react-leaflet": "^4.2.1",
+    "resend": "^3.2.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5.5.0",
+    "@playwright/test": "^1.45.0",
+    "@testing-library/jest-dom": "^6.4.0",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@types/leaflet": "^1.9.8",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
-    "prettier": "^3.3.0",
     "jest": "^29.7.0",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/jest-dom": "^6.4.0",
-    "@testing-library/user-event": "^14.5.0",
-    "@types/jest": "^29.5.0",
-    "ts-jest": "^29.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "playwright": "^1.45.0",
-    "@playwright/test": "^1.45.0"
+    "prettier": "^3.3.0",
+    "ts-jest": "^29.2.0",
+    "typescript": "^5.5.0"
   }
 }
